# OpenSTO

./: .gitignore  LICENSE  Makefile.txt  README.md  docker-compose-opensto.yml  docker-compose-pipeline.yml  opensto-deploy.sh  opensto-undeploy.sh  pipeline-deploy.sh  pipeline-undeploy.sh  pyproject.toml  ruff.toml
db/: Dockerfile  init.sql
security/: Dockerfile  alembic.ini  pyproject.toml
security/scripts/: create_alembic_version.sh  pre_start.sh  recreate_resources_db.sh  start.sh
security/src/: __init__.py  backend_pre_start.py  config.py  exceptions.py  logging_config.json  main.py  setup_logging.py
security/src/alembic/: env.py
security/src/alembic/versions/: 2d581724906c_database_initialization.py
security/src/control/: __init__.py  control_sbi.py  controller.py  opensto.py  osm.py  tfs.py
security/src/decision_engine/: __init__.py  decision_engine.py  plugin_router.py  topology.py
security/src/decision_engine/plugins/: __init__.py  ddos_protection.py
security/src/manager/: __init__.py  manager_across.py  manager_common.py
security/src/nbi/: __init__.py  exceptions.py  nbi.py
security/src/nbi/routers/: dependencies.py
security/src/resources/: __init__.py  db.py  resources_db.py
security/src/resources/crud/: closed_loop.py  controller.py  firewall.py  nsf.py  nsf_instance.py  nsi.py  nst.py  opensto_service.py  probe.py  provider.py  ssla.py  topology.py  vertical_ns.py  wim.py
security/src/resources/models/: closed_loop.py  controller.py  firewall.py  nsf.py  nsf_instance.py  nsi.py  nst.py  opensto_service.py  probe.py  provider.py  service_info.py  topology.py  vertical_ns.py  wim.py
security/src/ssla_policy/: __init__.py  ssla_policy.py
(+137 files in other folders)
