[tool.poetry]
name = "opensto"
version = "0.1.0"
description = ""
authors = ["shajipour <shajipour@cttc.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
networkx = "^3.4.2"
pyvis = "^0.3.2"
httpx = "^0.27.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
