[tool.poetry]
name = "security"
version = "0.1.0"
description = "Security solution to deploy network slices with associated Security & Trust SLA requirements and monitor them."
authors = ["CTTC"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.0"}
pydantic = "^2.6.4"
sqlmodel = "^0.0.16"
pydantic-settings = "^2.2.1"
psycopg = "^3.1.18"
tenacity = "^8.2.3"
httpx = "^0.27.0"
networkx = "^3.3"
paramiko = "^3.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.1.1"
pre-commit = "^3.6.2"
coverage = "^7.5.0"
alembic = "^1.13.1"
deepdiff = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = 1

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
disable = """
    missing-function-docstring,
    missing-class-docstring,
    missing-module-docstring,
    line-too-long,
    wrong-import-position,
    invalid-name,
    no-name-in-module
"""
good-names = "i,j,x,y,id,db"

[tool.pytest.ini_options]
addopts = '-ra -q'
testpaths = [
    'tests'
]